# -

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
archive/: README.md
docs/: tauri_to_rest_api_mapping.md  排座助手_桌面版交付说明.md  排座助手_桌面版验收清单.md
electron/: backendProcess.ts  logger.ts  main.ts  paths.ts  preload.ts  tsconfig.json
scripts/: embed-win-icon.cjs  verify-ppt-export.mjs
server/: __init__.py  main.py  paizuo-backend.spec  requirements-build.txt  requirements.txt  run_desktop.py
server/api/: common.py  export_routes.py  health_routes.py  layout_routes.py  log_routes.py  people_routes.py  plan_routes.py  seat_routes.py  settings_routes.py  table_routes.py
server/core/: config.py  database.py
server/migrations/: README.md  __init__.py  schema.sql
server/repositories/: activity_repo.py  export_repo.py  layout_repo.py  people_repo.py  plan_repo.py  plan_version_repo.py  settings_repo.py
src/: index.css  main.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/api/: client.ts  layouts.ts  people.ts  plans.ts  seats.ts  settings.ts  tables.ts
src/components/: AppShell.tsx  RoundCheckPanel.tsx  RoundTableCard.tsx  RoundVersionHistoryDrawer.tsx  SeatRing.tsx  Sidebar.tsx  TopToolbar.tsx
src/config/: seatRoleTemplates.ts
src/fullscreen/: fullscreenVisualCaps.ts  layoutOps.ts  normalizeLayoutSnapshot.ts  roundStorage.ts  seedLayout.ts  types.ts
src/lib/: buildRoundOverviewTableRows.ts  dbApi.ts  dbTypes.ts  layoutBridge.ts  (+8 more)
(+34 files in other folders)
